# ish

./: .gitignore  .gitmodules  CLAUDE.md  DEBUGGING_STRATEGY.md  GEMINI.md  create_proper_db  create_proper_db.c  debug.h  debug_64bit.lldb  debug_64bit_crash.lldb  debug_64bit_detailed.lldb  debug_64bit_gpf.lldb  debug_after_fix.lldb  debug_call64_entry.lldb  debug_call64_values.lldb  debug_check.lldb  debug_crash.lldb  debug_crash.sh  debug_detailed.lldb  debug_detailed.txt  debug_disasm.lldb  debug_e2e.sh  debug_fiber_enter.lldb  debug_float80  debug_float80.c  debug_fs_init  debug_fs_init.c  debug_full_bt.lldb  debug_gpf.lldb  debug_hang.sh  debug_illegal_inst.lldb  debug_instruction_analysis.py  debug_ip_analysis.lldb  debug_ish.lldb  debug_ish_wrapper.sh  debug_layout  debug_layout.c  debug_lldb_script.lldb  debug_ls.sh  debug_post_fix.lldb  (+51 more)
alpine-64bit-processed/: meta.db  meta.db-shm  meta.db-wal
asbestos/: asbestos.c  gadgets-generic.h  gen.c  gen64.c  helpers.c  offsets.c
emu/: arch.h  cpu.h  cpuid.h  decode.h  decode.h.backup  decode64.c  decode64.h  interrupt.h  mmu.h  modrm.h  tlb.c  tlb.h  vec.c
fs/: dir.c  fake-db.c  fake.c  fd.c  real.c  sock.c  sock.h  stat.c  stat.h
kernel/: calls.c  calls.h  elf.h  exec.c  exit.c  fork.c  fs.c  futex.c  init.c  memory.c  memory.h  misc.c  mmap.c  ptrace.c  random.c  signal.c  signal.h  syscalls_x86.h  syscalls_x86_64.h  task.c  time.c  time.h  tls.c  uname.c
platform/: darwin.c  linux.c
test_crash_debug/: meta.db  meta.db-shm  meta.db-wal
test_fresh_db/: meta.db-shm  meta.db-wal
test_with_root_fs/: meta.db  (+2 more)
(+43 files in other folders)
