option('log', type: 'string', value: '')
option('nolog', type: 'string', value: '')
option('log_handler', type: 'string', value: 'dprintf')

option('engine', type: 'combo', choices: ['asbestos', 'unicorn'], value: 'asbestos')
option('kernel', type: 'combo', choices: ['ish', 'linux'], value: 'ish')
option('arch', type: 'combo', choices: ['i386', 'x86_64'], value: 'i386')
option('kconfig', type: 'array', value: [])

option('vdso_c_args', type: 'string', value: '')

option('no_crlf', type: 'boolean', value: false)
